--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>webpack_demo</title>
+    <title>vue_todos</title>
     <link rel="stylesheet" href="./static/main.css">
   </head>
   <body>
